--- a/gb/9/4/28/n2508480.md
+++ b/gb/9/4/28/n2508480.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/boyqsg391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/boyqsg391/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/boyqsg391/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/boyqsg391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/boyqsg391/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/boyqsg391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>打压法轮功的包袱 中共还能背多久？(2)</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2009/04/904211650421667-600x400.jpg" />
 <h6>1999年之前法轮功在大陆洪传，当时有上亿人学炼法轮功。图为1998年沈阳一集体炼功场面。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元4月28日讯】（新唐人电视台《<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E7%83%AD%E7%82%B9%E4%BA%92%E5%8A%A8.md#1">热点互动</a>》节目）主持人：各位观众朋友，今天我们的话题是“打压<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的包袱，中共还能背多久？”，十年前的4月25日到底发生了什么？为什么中共要打压法轮功？欢迎您打我们的热线号码发表您的意见或者是向我们现场的嘉宾提问。</p>
+	<p>【大纪元4月28日讯】（新唐人电视台《<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%83%AD%E7%82%B9%E4%BA%92%E5%8A%A8.md#1">热点互动</a>》节目）主持人：各位观众朋友，今天我们的话题是“打压<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>的包袱，中共还能背多久？”，十年前的4月25日到底发生了什么？为什么中共要打压法轮功？欢迎您打我们的热线号码发表您的意见或者是向我们现场的嘉宾提问。</p>
 <p><center><ahref=http://inews.ntdtv.com/data/ntd_runlist_program_store/converted/2009/04/25/RDHDLive_04-24-09_A_1_425HePingShangFang.flv>下载收看</a></center></p>
 <p>热线号码是646-519-2879；中国大陆的免费号码是4007087995，再拨8991160297；您也可以通过Skype和我们联系，Skype地址是：RDHD2008。</p>
-<p>今天我们现场有两位嘉宾，刚才我们谈到很多人认为说，如果你<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>不去上访，中共也就不会去镇压你。那么刚才我们问了杨医师他为什么要去上访。现在我们来谈一下，据说当时在常委中，有很多人是不同意镇压法轮功的，因为法轮功学员在社会不同阶层，只是为了做一个好人、锻炼身体这样而已，那最后为什么要对法轮功大规模镇压呢？</p>
+<p>今天我们现场有两位嘉宾，刚才我们谈到很多人认为说，如果你<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>不去上访，中共也就不会去镇压你。那么刚才我们问了杨医师他为什么要去上访。现在我们来谈一下，据说当时在常委中，有很多人是不同意镇压法轮功的，因为法轮功学员在社会不同阶层，只是为了做一个好人、锻炼身体这样而已，那最后为什么要对法轮功大规模镇压呢？</p>
 <p>杨景端：我个人是这么看的，实际从表面上看，大家看到的是“4．25”上访，其实“4．25”上访是整个事件的延续，像刚才章天亮说的，从96年中共就开始对法轮功进行各种各样的诬陷、骚扰、构陷，希望有一天能找出一个理由来迫害他。</p>
 <p>“4．25”实际上是这样一个迫害思路的延续，通过天津的事件，然后再把法轮功学员支到北京，再制造出这样一个场面，再用这个场面把吓唬江泽民。实际上江泽民他之所以在4．25做出这样一个决定，我认为他本身对他自己的地位感到非常的空虚。尤其是在朱镕基妥善的处理这件事情得到国际社会的赞扬的时候，我认为江泽民的妒嫉心，或是他会担心，就像人家说你功高震主，他对自己的权威非常没有信心。</p>
 <p>所以江泽民实际上是利用镇压法轮功这件事情，要树立他自己的威权，那么这是他的动机之一。那么至于后来的4．25到7．20之间发生的事情，也是整个事件的一个自然延续。也就是说江泽民这样一个妒嫉心很强，疑心很重，又加上中共有这样一个邪恶的政权和机器供他使用，那么他自然就做出镇压法轮功的决定。</p>
@@ -62,47 +62,47 @@
 <p>所以中国从共产党统治以来，从反胡风运动、反右、大跃进、大饥荒、文革、六四、西藏问题一直到法轮功，我觉得它会把这个包袱背着，一直到它走向灭亡，所以我并不是很悲观的想法，在它没有走向灭亡之前，它不可能把这些包袱解下来的，它一定要跟它捆在一起走入历史。</p>
 <p>主持人：好，谢谢王女士。</p>
 <p>（待续）</p>
-<p>（据新唐人电视台《<ahref="https://github.com/boyqsg391/djy/blob/master/gb/tag/%E7%83%AD%E7%82%B9%E4%BA%92%E5%8A%A8.md#1">热点互动</a>》节目录音整理）<font color=#ffffff>(http://www.dajiyuan.com)</font></p>
+<p>（据新唐人电视台《<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%83%AD%E7%82%B9%E4%BA%92%E5%8A%A8.md#1">热点互动</a>》节目录音整理）<font color=#ffffff>(http://www.dajiyuan.com)</font></p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/4/26/n2507322.md#1">他从固执高傲 变为踏实有责任</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/4/27/n2507795.md#1">爱城集会纪念“4?25”十周年 市民声援</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/4/27/n2507805.md#1">4.25亲历者：善良对峙邪恶</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/4/27/n2507810.md#1">访4.25亲历者: 十年风雨路 重压志未移</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/4/26/n2507322.md#1">他从固执高傲 变为踏实有责任</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/4/27/n2507795.md#1">爱城集会纪念“4?25”十周年 市民声援</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/4/27/n2507805.md#1">4.25亲历者：善良对峙邪恶</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/4/27/n2507810.md#1">访4.25亲历者: 十年风雨路 重压志未移</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/27/n9898377.md#1" target="_blank">折断的蝴蝶翅膀──慈禧御前女官舞蹈家裕容龄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/21/n11061288.md#1" target="_blank">林辉：毁黄帝炎帝陵 中共与中华民族水火不容</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794550.md#1">遥视月球 特异功能者惊出冷汗</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794570.md#1">“消失的同学”轰动网路 难道真有另一个世界？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/7/n12794882.md#1">晚清人到地府办差 往来阴阳两界透天机</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805471.md#1">【未解之谜】里根总统?亲历鬼门关</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/14/n12809837.md#1">【新闻看点】佩洛西挺方芳情人？库默丑闻井喷</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/13/n12808412.md#1">车评：美式流线 2021 Chevrolet Blazer RS</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12808162.md#1">【有冇搞错】中国种子危机 涉及种族延续存亡</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12807642.md#1">分析师：COSTCO会员费或将涨价</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12807834.md#1">马云在哪？飞行记录显示：主要去两个地方</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12808193.md#1">李林一：李克强接班人 习会做加法还是减法？</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805292.md#1">情牵夏克立15年 黄嘉千分享异国婚姻保鲜秘笈</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805460.md#1">郭富城紧急捐款 助38岁港星治疗肺癌第四期</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12808151.md#1">买得越多单价越贵 陆女星戚薇惊觉网购被坑</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805654.md#1">组明星行山队当金牌教练 发哥一句话感时伤怀</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12806841.md#1">陪赵小侨引产  刘亮佐坦言自己感性 哭比较惨</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12806105.md#1">意大利忠狗每天独自走3公里 到坟前陪主人</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12806462.md#1">美国数百人目击UFO 电视台派记者搭机调查</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/13/n12808611.md#1">他捕获大鱼宴请全村 吃完才知百万美元没了</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/11/n12805019.md#1">素食能防癌、降血糖 这样吃不怕缺4种营养素</a></li>
-<li><a href="https://github.com/boyqsg391/djy/blob/master/gb/21/3/12/n12808267.md#1">小腹凸不是因为胖？10秒动作 让肚子瘦下来</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/boyqsg391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/4/28/n2508480.htm">打压法轮功的包袱 中共还能背多久？(2)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/9/4/28/n2508480.htm">打压法轮功的包袱 中共还能背多久？(2)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/boyqsg391/djy/blob/master/gb/9/4/28/n2508480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/boyqsg391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/boyqsg391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/boyqsg391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/9/4/28/n2508480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
